# learn_opengl

./: README.md
coordinate_systems/: build.sh
coordinate_systems/src/: main.cpp
coordinate_systems/src/shaders/: triangleshader.glsl  triangleshaderfrag.glsl
shader/: CMakeLists.txt  compile_commands.json
shader/src/: Shader.cpp  glad.c  main.cpp
shader/src/shaders/: triangleshader.glsl
texture/: CMakeLists.txt
texture/src/: main.cpp
texture/src/shaders/: triangleshader.glsl
transform/: CMakeLists.txt
transform/src/: shader.h
triangle/: .gitignore  CMakeLists.txt
triangle/include/glad/: glad.h
triangle/src/: main.cpp  shader.cpp  shader.h
